Don't use the attribute of the end since the end will be commented

BUG:102316

svn path=/trunk/KDE/kdelibs/kate/; revision=1193691